--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TestTotoIT</string>
+    <string name="webview_error_text">Error, cannot load page.</string>
+    <string name="button_text_refresh">Refresh</string>
 </resources>
